package modelagem_iphone;

public interface AparelhoTelefonico {
	public void atender();

	public void iniciarCorreioVoz();

	public void ligar(String numero);
}
