package modelagem_iphone;

public interface NavegadorInternet {
	
	
	public void atulizarPagina();
	
	public void adicionarNovaAba();
	
	public void exibirpágina(String url);
	
	
	
	
	
	

}
